Update CorsConfigurationSource